--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -27,7 +28,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>swapping_webon</title>
   <link rel="manifest" href="manifest.json">
@@ -38,17 +39,26 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
+  <!-- nomo-webon-kit dependecies -->
+  <script type="module" src="nomo-webon-kit/dart_interface.js" defer></script>
+  <script type="module" src="nomo-webon-kit/index.js" defer></script>
+  <script type="module" src="nomo-webon-kit/nomo_api.js" defer></script>
+  <script type="module" src="nomo-webon-kit/nomo_auth.js" defer></script>
+  <script type="module" src="nomo-webon-kit/nomo_theming.js" defer></script>
+  <script type="module" src="nomo-webon-kit/util.js" defer></script>
 </head>
+
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
+    window.addEventListener('load', function (ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine().then(function (appRunner) {
             appRunner.runApp();
           });
         }
@@ -56,4 +66,5 @@
     });
   </script>
 </body>
+
 </html>
