--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,10 @@
   <script type="module" src="nomo-webon-kit/dart_interface.js" defer></script>
   <script type="module" src="nomo-webon-kit/nomo_auth.js" defer></script>
   <script type="module" src="nomo-webon-kit/nomo_multi_webons.js" defer></script> 
-   <script type="module" src="nomo-webon-kit/nomo_web3.js" defer></script>
+  <script type="module" src="nomo-webon-kit/nomo_web3.js" defer></script>
+   <script type="module" src="nomo-webon-kit/util.js" defer></script>
+    <script type="module" src="nomo-webon-kit/nomo_platform.js" defer></script>
+   
 </head>
 
 <body>
